      debhelper compat is less than 7.
  * checks/description.pm:
    + [AB] Fix false positives in
      perl-module-name-not-mentioned-in-description.  (Closes: #795779)
  * checks/fields.{desc,pm}:
    + [JW] Use "an" (instead of "a") before "HTTP".
    + [NT] Assert that -dbgsym packages are in the "debug" section.
      Thanks to Jean-Michel Vourgère for reporting the issue.
  * checks/obsolete-sites.{desc,pm}:
    + [AB] New check with tag obsolete-url-in-packaging to check for URLs
      of hosting sites with frozen contents or (soon to be) closed hosting
      sites (Google Code, Gitorious, Freshmeat, etc.) inside the
      packaging.  (Closes: #793503)
  * checks/scripts.pm:
    + [BR] Fix Unescaped left brace in regex.  (Closes: #788926)
  * checks/version-substvars.pm:
    + [BR] Fix Unescaped left brace in regex is deprecated line 68.
  * checks/watch.desc:
    + [BR] Upgrade upstream PGP keys location.  (Closes: #796311)

  * data/binaries/embedded-libs:
    + [RG] Add another matching string for libidn
  * data/fields/archive-sections:
    + [NT] Remove the "debugsym" section as "ddebs" will be put in
      the regular "debug" section.
  * data/scripts/maintainer-script-bad-command:
    + [AB] Fix maintainer-script-should-not-use-adduser-system-without-home
      false positve in cases where --system and --home are ordered
      differently than initially expected. (Closes: #797395)

  * debian/control:
    + [AB] Update Vcs-Browser header to use https and cgit.

  * lib/Lintian/{Tags.pm,Tag/Override.pm}:
    + [BR] Support tag renaming. Warn about renamed
      tags.

  * t/runtests:
    + [BR] Apply patch from Chris Lamb improving documentation.
      (Closes:  #796822).
  * t/scripts/01-critic/runner.pl:
    + [AB] Fix FTBFS in perlcritic runner with Test::Perl::Critic 1.03
  * t/tests/application-not-library/debian/debian/control.in:
    + [AB] Add a false positive test for libapp-perl-package-name.
