@@ -1268,6 +1268,7 @@ Tag: package-relation-with-perl-modules
 Severity: important
 Certainty: certain
 Experimental: yes
-Info: No package should depend on 'perl-modules'. Instead, a suitable
- dependency on 'perl' should be used. The existence of the perl-modules
- package is an implementation detail of the perl packaging.
+Info: No package should (build-) depend on 'perl-modules'. Instead, a
+ suitable dependency on 'perl' should be used. The existence of the
+ perl-modules package is an implementation detail of the perl
+ packaging.
