@@ -3,7 +3,7 @@ Priority: extra
 Section: {$section}
 Maintainer: {$author}
 Standards-Version: {$standards_version}
-Build-Depends: debhelper (>= 9), libencode-perl (>= 2.4)
+Build-Depends: debhelper (>= 9), libencode-perl (>= 2.4), perl-modules
 
 Package: {$source}
 Architecture: {$architecture}
