@@ -24,5 +24,6 @@ W: fields-depends-general: depends-on-packaging-dev depends
 W: fields-depends-general: package-relation-with-self breaks: fields-depends-general (<< 0.1)
 W: fields-depends-general: versioned-dependency-satisfied-by-perl depends: libtest-simple-perl (>= 0.98)
 W: libfields-depends-general: lib-recommends-documentation recommends: debconf-doc
+X: fields-depends-general source: package-relation-with-perl-modules build-depends: perl-modules
 X: fields-depends-general: package-relation-with-perl-modules depends: perl-modules
 X: libfields-depends-general: package-relation-with-perl-modules depends: perl-modules-5.22
