@@ -40,6 +40,8 @@ lintian (2.5.37) UNRELEASED; urgency=medium
     + [JW] Use "an" (instead of "a") before "HTTP".
     + [NT] Assert that -dbgsym packages are in the "debug" section.
       Thanks to Jean-Michel Vourgère for reporting the issue.
+    + [AB] Also emit package-relation-with-perl-module for build-*
+      relations. Thanks gregor herrmann! (Closes: #798385)
   * checks/obsolete-sites.{desc,pm}:
     + [AB] New check with tag obsolete-url-in-packaging to check for URLs
       of hosting sites with frozen contents or (soon to be) closed hosting
